--- a/PhotPrepForm/App.config
+++ b/PhotPrepForm/App.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="SourceStartDir" value="d:\Pictures\2017\"/>
-    <add key="TargetDir" value="d:\Photometry\temp\"/>
-  </appSettings>  
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+    <add key="SourceStartDir" value="d:\Pictures\2018\" />
+    <add key="TargetDir" value="d:\Photometry\temp\" />
+    <add key="BlueChannelStars" value="vvcep;uuaur" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
